--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
     "lint": "eslint client/**/*.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6"
   }
 }
