--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "fzaninotto/faker": "^1.8",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/maker-bundle": "^1.11"
     }
