--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,8 @@
         }
     },
     "require-dev": {
+        "symfony/property-access" : "^4.2.7",
+        "symfony/serializer": "^4.2.7",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "fzaninotto/faker": "^1.8",
         "squizlabs/php_codesniffer": "^3.4",
