--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.4",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+        "doctrine/doctrine-fixtures-bundle": "^3.1"
     },
     "config": {
         "preferred-install": {
