--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.4",
         "symfony/yaml": "4.2.*",
-        "symfony/property-access" : "^4.2.7",
-        "symfony/serializer": "^4.2.7"
+        "doctrine/doctrine-fixtures-bundle": "^3.1"
     },
     "config": {
         "preferred-install": {
@@ -64,8 +63,6 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "symfony/property-access" : "^4.2.7",
-        "symfony/serializer": "^4.2.7",
         "fzaninotto/faker": "^1.8",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/maker-bundle": "^1.11"
