--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/property-access": "^4.2.7",
+        "symfony/security-bundle": "4.2.*",
+        "symfony/serializer": "^4.2.7",
         "symfony/twig-bundle": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.4",
         "symfony/yaml": "4.2.*",
-        "symfony/property-access" : "^4.2.7",
-        "symfony/serializer": "^4.2.7"
+        "symfony/form": "4.2.*"
     },
     "config": {
         "preferred-install": {
