--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,17 @@
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
+        "symfony/form": "4.2.*",
         "symfony/framework-bundle": "4.2.*",
         "symfony/orm-pack": "^1.0",
         "symfony/property-access": "^4.2.7",
         "symfony/security-bundle": "4.2.*",
         "symfony/serializer": "^4.2.7",
+        "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
+        "symfony/validator": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.4",
-        "symfony/yaml": "4.2.*",
-        "symfony/form": "4.2.*"
+        "symfony/yaml": "4.2.*"
     },
     "config": {
         "preferred-install": {
