Fixed user role assigment.Added remember me. Added profiler for dev environment

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,8 +21,11 @@ security:
                 check_path: login
                 provider: app_user_provider
             logout:
-                path: /logout
+                path: logout
                 target: /
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 2592000 # 30 days in seconds
             guard:
                 authenticators:
                     - App\Security\UserAuthenticator
