--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "fzaninotto/faker": "^1.8",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/maker-bundle": "^1.11"
+        "symfony/maker-bundle": "^1.11",
+        "symfony/profiler-pack": "^1.0"
     }
 }
