--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "javascript-serializer": "^1.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -48,7 +49,9 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0"
   }
 }
