--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.0.1",
     "webpack-notifier": "^1.6.0"
   },
