Added infinite scroll to volunteer list

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-infinite-scroll-component": "^4.5.2",
     "react-paginate": "^6.3.0",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
