--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.7",
     "redux-devtools-extension": "^2.13.8",
@@ -42,11 +42,16 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-daterangepicker": "^3.0.5",
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
     "javascript-serializer": "^1.0.0",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-dom": "^16.8.6",
     "react-infinite-scroll-component": "^4.5.2",
     "react-paginate": "^6.3.0",
