--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
     "javascript-serializer": "^1.0.0",
+    "jquery-countto": "^1.2.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
