--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,7 +17,7 @@ security:
         main:
             anonymous: true
             form_login:
-                login_path: login
+                login_path: app_login
                 check_path: login
                 provider: app_user_provider
             logout:
@@ -44,5 +44,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_VOLUNTEER }
+         - { path: ^/event, roles: ROLE_ORGANISATION }
         # - { path: ^/profile, roles: ROLE_USER }
