--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "fzaninotto/faker": "^1.8",
+        "phpstan/phpstan": "^0.11.8",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/maker-bundle": "^1.11",
         "symfony/profiler-pack": "^1.0"
