--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "redux-form": "^8.2.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.27.0"
   }
 }
